--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="info-img">
-              <img src="img/Mask group.png" alt="#" />
+              <img src="./img/Mask group.png" alt="#" />
             </div>
           </div>
         </div>
