--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <p class="first">INTRODUCTION</p>
               <div class="second">
                 <p>TO HYDRA VR</p>
-                <img src="img/arrow-small-right.png" alt="" />
+                <img src="./img/arrow-small-right.png" alt="" />
               </div>
             </div>
             <p class="int-main">
@@ -330,7 +330,7 @@
             </p>
           </div>
           <div class="about-main">
-            <img src="img/pexels-shvets-production-7562014 1.png" alt="" />
+            <img src="./img/pexels-shvets-production-7562014 1.png" alt="" />
             <div class="about-text">
               <p class="ab-title">ABOUT</p>
               <p class="ab-suptitle">HYDRA VR</p>
@@ -355,7 +355,7 @@
               <p class="first">WHY BUILD</p>
               <div class="second">
                 <p>WITH HYDRA?</p>
-                <img src="img/arrow-small-right.png" alt="" />
+                <img src="./img/arrow-small-right.png" alt="" />
               </div>
             </div>
             <p class="int-main">
@@ -374,7 +374,7 @@
       <div class="container">
         <div class="cards-inner">
           <div class="main-card">
-            <img src="img/1.png" alt="" />
+            <img src="./img/1.png" alt="" />
             <p class="card-title">SIMULATION</p>
             <p class="card-text">
               Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
@@ -383,7 +383,7 @@
             <input type="button" value="TRY IT NOW" />
           </div>
           <div class="main-card">
-            <img src="img/2.png" alt="" />
+            <img src="./img/2.png" alt="" />
             <p class="card-title">EDUCATION</p>
             <p class="card-text">
               Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
@@ -392,7 +392,7 @@
             <input type="button" value="TRY IT NOW" />
           </div>
           <div class="main-card">
-            <img src="img/3.png" alt="" />
+            <img src="./img/3.png" alt="" />
             <p class="card-title">SELF-CARE</p>
             <p class="card-text">
               Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
@@ -401,7 +401,7 @@
             <input type="button" value="TRY IT NOW" />
           </div>
           <div class="main-card">
-            <img src="img/4.png" alt="" />
+            <img src="./img/4.png" alt="" />
             <p class="card-title">OUTDOOR</p>
             <p class="card-text">
               Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
@@ -446,17 +446,17 @@
       <div class="container">
         <div class="glasses-inner">
           <div class="pictures">
-            <img src="img/unreal.png" alt="" />
-            <img src="img/unity.png" alt="" />
-            <img src="img/oculus.png" alt="" />
-            <img src="img/vive.png" alt="" />
+            <img src="./img/unreal.png" alt="" />
+            <img src="./img/unity.png" alt="" />
+            <img src="./img/oculus.png" alt="" />
+            <img src="./img/vive.png" alt="" />
           </div>
           <div class="introduction">
             <div class="int-title">
               <p class="first">HOW WE BUILD</p>
               <div class="second">
                 <p>WITH HYDRA VR?</p>
-                <img src="img/arrow-small-right.png" alt="" />
+                <img src="./img/arrow-small-right.png" alt="" />
               </div>
             </div>
             <p class="int-main">
